# claude-chat-search

./: CLAUDE.md  IDEAS.md  README.md  SKILL.md  com.claude-chat-search.daemon.plist  pyproject.toml
src/claude_chat_search/: chunker.py  cli.py  cross_search.py  daemon.py  db.py  embedder.py  parser.py  search.py  summarizer.py  vector_search.py
