[project]
name = "claude-chat-search"
version = "0.1.0"
description = "Semantic search over Claude Code conversations"
requires-python = ">=3.11"
dependencies = [
    "apsw>=3.45",
    "click>=8.0",
    "limbic @ git+https://github.com/houshuang/limbic.git",
    "sqlite-vec>=0.1.6",
    "tiktoken>=0.7",
]

[project.scripts]
claude-chat-search = "claude_chat_search.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/claude_chat_search"]
